feat(NetEase): plan to support NetEase version